--- a/www/layout/upload.html
+++ b/www/layout/upload.html
@@ -27,7 +27,7 @@
 	           </textarea> 
 	           </fieldset>
 		
-		<button name="login" type="button" id="loginSubmit" onclick="upload()">Send to authorities</button>
+		<button name="login" type="button" id="loginSubmit" ">Send to authorities</button>
 		</form>
 	
 	</div>
